# SkillBridge-AI

./: .gitignore  README.md
BE/: .gitignore  README.md  pyproject.toml
BE/src/: main.py
FE/: README.md  index.html  package-lock.json  package.json
FE/src/: App.tsx
FE/src/components/: AtsTips.tsx  EmptyState.tsx  ImprovementsList.tsx  MissingKeywords.tsx  ScoreBreakdown.tsx  ScoreOverview.tsx  StrengthList.tsx  SummaryCard.tsx  UploadForm.tsx  index.ts
FE/src/services/: api.ts
FE/src/types/: ats.ts
